fixing veritcal alignment of connect page

--- a/css/layout.css
+++ b/css/layout.css
@@ -60,12 +60,12 @@ header {
 }
 .section-light-full {
     background-color: #FFFFFF;
-    height: 100%;
+    height: 100vh;
     clear: both;
 }
 .section-dark-full {
     background-color: #2C3E50;
-    height: 100%;
+    height: 100vh;
     clear: both;
 }
 .section-light {
